segunda version de landing page noche

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ body {
 }
 /*SECCION 1*/
 .seccion1 {
-  border: 1px solid red;
   display: flex;
   flex-direction: column-reverse;
   padding: 30px;
@@ -89,4 +88,86 @@ body {
   box-shadow: 3px 3px 15px grey;
   border-radius: 5px;
   width: 100%;
+}
+
+/*SECCION 2*/
+.seccion2 {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 100px 30px 30px 30px;
+  background: url("../img/bg-curve-mobile.svg") no-repeat;
+  background-size: 1500px 100%; /*ancho alto*/
+  background-position: center;
+}
+
+.seccion2 img {
+  height: 100%;
+  width: 100%;
+}
+
+.contenido2 h3 {
+  text-align: center;
+  color: var(--DesaturatedBlue);
+}
+
+.contenido2 a {
+  color: var(--ModerateCyan);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  border-bottom: 1.8px solid var(--ModerateCyan);
+  margin: 0 auto; /*center*/
+  width: 45%;
+  margin-bottom: 100px;
+}
+
+.contenido2 a img {
+  height: 30px;
+  width: 30px;
+}
+
+.card2 {
+  box-shadow: 3px 3px 10px grey;
+  padding: 24px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.card2 img {
+  height: 20px;
+  width: 20px;
+}
+.contacto2 {
+  display: flex;
+  align-items: center;
+}
+
+.contacto2 img {
+  height: 45px;
+  width: 45px;
+  border-radius: 22.5px;
+  margin-right: 10px;
+}
+
+.contacto2 p {
+  font-weight: bold; /*Negrita*/
+}
+.contacto2 p span {
+  font-weight: normal;
+  font-size: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .seccion1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+  }
+
+  .form1 {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 10px;
+  }
 }
